--- a/Nudeln.html
+++ b/Nudeln.html
@@ -7,11 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #f8f9fa;
+            background-color: #ffffff;
         }
         header {
-            background-color: #343a40;
-            color: white;
+            background-color: #0c6300;
+            color: rgb(255, 255, 255);
             padding: 1rem 0;
             text-align: center;
         }
@@ -24,8 +24,8 @@
             text-align: center;
             margin-top: 2rem;
             padding: 1rem;
-            background-color: #343a40;
-            color: white;
+            background-color: #cf0000;
+            color: rgb(255, 255, 255);
         }
     </style>
 </head>
@@ -142,6 +142,10 @@
         </div>
     </section>
 </div>
+
+<footer>
+    <h1>Hope you like it!</h1>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
